# chess_multiplayer

./: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
src/: ChessServer.cpp  ChessServer.h  Connection.cpp  Connection.h  GameInstance.cpp  GameInstance.h  Player.cpp  Player.h  PlayersQueue.cpp  PlayersQueue.h  Session.cpp  Session.h
